--- a/get-item/CMakeLists.txt
+++ b/get-item/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 11)
 
-project(auth LANGUAGES CXX)
+project(get-item LANGUAGES CXX)
 
 find_package(aws-lambda-runtime REQUIRED)
 find_package(AWSSDK COMPONENTS core dynamodb)
