--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 11)
 
-project(api LANGUAGES CXX)
+project(test LANGUAGES CXX)
 
 find_package(aws-lambda-runtime REQUIRED)
 find_package(AWSSDK COMPONENTS core dynamodb)
